<resources>
    <string name="app_name">Teskif App</string>
    <string name="new_booking">New Booking</string>
    <string name="service_name">Service Name</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_time">Booking Time</string>
    <string name="service_price">Service Price</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="todo">TODO</string>
    <string name="title_activity_show">ShowActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading_data">Loading Data.....</string>
</resources>