<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookingActivity">

    <ImageView
        android:id="@+id/newBookinginput"
        android:layout_width="343dp"
        android:layout_height="532dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBooking"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/shape2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="480dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/sample"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/newBooking"
        android:layout_width="230dp"
        android:layout_height="43dp"
        android:text="@string/new_booking"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/bServiceinpute"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:text="@string/service_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/bDateinpute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/bTimeinpute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_time"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/bPriceinpute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_price"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />


    <Button
        android:id="@+id/subBtn"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#ffff00"
        android:text="@string/add"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/canBtn"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#ffff00"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toEndOf="@+id/subBtn" />

    <EditText
        android:id="@+id/bService"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Service"
        android:background="@color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bServiceinpute" />

    <EditText
        android:id="@+id/bDate"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Enter Date"
        android:background="@color/white"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bDateinpute" />

    <EditText
        android:id="@+id/bTime"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Time"
        android:background="@color/white"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/bPriceinpute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bTimeinpute"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/bPrice"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Price"
        android:background="@color/white"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bPriceinpute" />


</androidx.constraintlayout.widget.ConstraintLayout>